# ChangeLog for app-crypt/ccid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/ccid/ChangeLog,v 1.109 2014/06/26 19:57:03 flameeyes Exp $

*ccid-1.4.17 (26 Jun 2014)

  26 Jun 2014; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.17.ebuild:
  Version bump.

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org> ccid-1.4.15.ebuild:
  Stable for ppc64, wrt bug #505892

  13 Apr 2014; Agostino Sarubbo <ago@gentoo.org> ccid-1.4.15.ebuild:
  Stable for ppc, wrt bug #505892

  12 Apr 2014; Agostino Sarubbo <ago@gentoo.org> ccid-1.4.15.ebuild:
  Stable for x86, wrt bug #505892

  11 Apr 2014; Chema Alonso <nimiux@gentoo.org> ccid-1.4.15.ebuild:
  Stable for amd64 wrt bug #505892

  05 Apr 2014; Jeroen Roovers <jer@gentoo.org> ccid-1.4.15.ebuild:
  Stable for HPPA (bug #505892).

  01 Apr 2014; Markus Meier <maekke@gentoo.org> ccid-1.4.15.ebuild:
  arm stable, bug #505892

*ccid-1.4.16 (23 Mar 2014)

  23 Mar 2014; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.16.ebuild:
  Version bump.

*ccid-1.4.15 (14 Feb 2014)

  14 Feb 2014; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.15.ebuild:
  Version bump.

*ccid-1.4.14 (02 Dec 2013)

  02 Dec 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.14.ebuild,
  -ccid-1.4.11.ebuild, -ccid-1.4.13.ebuild:
  Version bump; remove old.

*ccid-1.4.13 (12 Oct 2013)

  12 Oct 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.13.ebuild,
  -ccid-1.4.10.ebuild, -ccid-1.4.9.ebuild:
  Version bump; remove old.

*ccid-1.4.11 (17 Jun 2013)

  17 Jun 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.11.ebuild,
  +files/92_pcscd_ccid.rules:
  Version bump; use the old udev rules as upstream is playing with us.

*ccid-1.4.10 (17 Apr 2013)

  17 Apr 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.10.ebuild:
  Version bump.

*ccid-1.4.9 (16 Jan 2013)

  16 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org> +ccid-1.4.9.ebuild:
  Version bump.
