@@ -1,6 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX 92_pcscd_ccid-2.rules 2282 SHA256 d3e81896e4a6250f59a0675c819329e6ed5ad599edf6384b5fcb113c373599e8 SHA512 9ce5f2294e73b61657ee3d578c0de752ae64cd1e8cd2027c93300ae718f2c9c2dda328d366d8d30dfa96b4816c7a523f9a6db09f65a55aee20eb68c8d7f9bdf3 WHIRLPOOL f3471eb71a59d98626ac45d1a5b72fd4cdb64cf22a9c3b6939aeb75da2006f2dde68ec851ed62c872ace7e9d04f87f04462a9723f0a0af3a5c7d31958a10635d
 AUX 92_pcscd_ccid.rules 2167 SHA256 324e933bff4ddf474abf32102d53e883e709ae5d93d7dcf11460909e27b80ece SHA512 87a35f50c03a11c51f08b7795cc7e0c58c00f630e9263ac793e13352a83ec2bd1a8c0e4d7e4593936ba7b458fc917f4e0ebfe5ee6755265369d3be03dfbac595 WHIRLPOOL 8a72a1df97d66f8bfb1e1c678ff47090df7e37c266f9465841ed684ff0fa08cffe0a0b1c8dfd51f5d31686683fd35b76a3dbb3c9ec06c254bb94740f526b0231
 DIST ccid-1.4.14.tar.bz2 484659 SHA256 c50b04ac8e800a14246ea42cf37f73bd42fdb3645afb290b7af091f9e15cd146 SHA512 72e9a026689a308a1eb96ab7e31a6af987782e8c66721e1fd0f4eb7b575363309303cdf138863c35e3feda789517122fd6f15cbd4b03bf3ed870a5e7fae9b5ea WHIRLPOOL ddb427f1efa1e5b512fb114b9cf57e92b81a449bc46f6788b8054754c09b7d30491713f76da08fd9272c3803b1f12dfa38269ef501bc7817bd6bd47d3a739115
 DIST ccid-1.4.15.tar.bz2 487625 SHA256 5436182246f15b3e78b1ad6707022b02dc400e3f50c4cb5e5d340a4e716d990a SHA512 393eb65db0fb31b58d4010c10cae6c7592078b02d0e77b7741330cc3b1e5dd768fa08dbaf75db39c547e3603fa70aa1c8aaf3b536266314f2f04d2ff2b6fb29c WHIRLPOOL 0dd511454cf8e39303318b61f9e2390f2ef27b763e80e9270f55ee15966ced8378f3f3ee5440b6380481f970f03ae37bbb2221da6c3d2d658622ea4cdc3aee3f
@@ -10,20 +11,21 @@ DIST ccid-1.4.8.tar.bz2 470158 SHA256 7aca09fa4b9099e423402fd5df424adbafa5028887
 EBUILD ccid-1.4.14.ebuild 1271 SHA256 bf3a6b57c8dd4fd4f3b07ce89cb6402e2f7b6d94dfc315818944a17441fdaa27 SHA512 29d224e22dce4f8c47fed3f488531d34ad7bfeeb722f3018b5465f0589dc115573295c82205c1d5fbb81561ee8f88fb8159a08ef4e73760c94ba1a3832ae7435 WHIRLPOOL 17b64ce14af88e123debc7400a377dda28c70de57f5a7aa06a12171760e46ec37c07d33483f166ab2e6202a8bd34ad96d00922effc413e7b6fa31ec19f2127cb
 EBUILD ccid-1.4.15.ebuild 1259 SHA256 646b59adb8d3a3a8a33d88f674d0ad351c052a6971a0f769d4082c37fccc5c84 SHA512 6558cd7bc2c2f1e8bcb426042c1ed30d3d32b19a0930694b90a3a9d59f912efa650acaec996888d93a390850b7a00ceed2e0ba511b5d1db37e4ee2e01c3d66dd WHIRLPOOL 112ec9db1b15257efb8853fc01a1e433e6ca54ccbce835c722bbd6cc143810208efd5cb9bd0f7ac1b7f89b56cce650d09b56a9ef9db0d075a7f12bf761610a12
 EBUILD ccid-1.4.16.ebuild 1272 SHA256 57d1a4a9ba2417f5a98af0f54af5e98c1fde99eb26012fb15036c91f9752d5a5 SHA512 04d87e3c030553a39098f34680bffb9bc161633a0e39e49b1e67f89f0f939cbc44a7e8011eb52955ca4e4cdd938400ba85209cf4b8fbae4c8907d88ad7d1845c WHIRLPOOL 463f0642b744f2341dab980a39775ee695f5a462cbc66cf4b500bf4a4d73e91c6fcc3fb52dd7293ef349fa4e491a9afa886f6ffaf98c7806d572e86ff84bc77d
+EBUILD ccid-1.4.17-r1.ebuild 1277 SHA256 8b618910a0948e5beeb0b721899811931d0c34aba5c82c17b68994c8248847fe SHA512 48b3e2a806edf1975da1ad016a5b93aa84b20cf8e9a546e449243297c6fb93363474b297b0483114831c9611f4ad7f777f99bdce7ba0e5079895a42204e9e542 WHIRLPOOL d664f72326aca053a22c1c6f9abae034c62eaaeefd71886b0dffbca1bdfbad826c6eaf409f5551745fe87f5a7b0495692f1173819a347f6c63d9d5861ceeda62
 EBUILD ccid-1.4.17.ebuild 1272 SHA256 e8e3fd003ebf84ded13e34c049a117f8a20d8b291ebb6d14cfc9156c2c7e679b SHA512 47a17407aceb696cc13914a28271e3d5e444b3de00dfb85a629511867846d4d63d76d5923ee7e1c1cd33b7e769af4de0e649a1ecd26f80553579e8f8b2175c6c WHIRLPOOL f883377d417aae4917bdb9d76bdcb9851408154961c6c635d3b49b28f4ed0d8acb40d30a07212cac4b5aab8a3a3ccfb5e663b2db2f57bce54aa998020055fb13
 EBUILD ccid-1.4.8.ebuild 1167 SHA256 a7a9e9268056c47271628a920ec0b45d80a9763b69f93500e38b9122c1287365 SHA512 fcc61873fd6f79031bb50ea44ad02add4e7291022ee52bac855c2d988a1c771ad60a36ae38b6b82e6539985d0c57ffbfb3a400194b1670cd86ceca235d155bc6 WHIRLPOOL 0cf79d09d555156cbbd99540c0b6bfcf04eab1e55a5b03592fa83778c659d6047b909fec35025000af88fae249399b8b2ca8614d520068dd983be7b834cd3b10
-MISC ChangeLog 15072 SHA256 7a22fa6e7f279189b42f37b4355e84be120834582322fc589004400fcb24afe5 SHA512 63757f742ee8c884676646b3f2161eb8a461a63823e6c590b0ab6cf688f191c9d41c90b4d388763c8268a612aa3e27601e29f8bce31e5f5573749ef213fc2f53 WHIRLPOOL 8917224191f1a44b7d98942ab1ecb23c6c20337d5c98454a4955be2752df012e1aed93b69a705d680664638cad0334e5eab891527521670a8ee22223f31075c7
+MISC ChangeLog 15349 SHA256 e9a038f77f2418374bbc5b18e99b993316d1f1442158d4099744965a741c01f1 SHA512 354d1266daf8ceb83efdafe05ad0c2d269f6cd275c0be5f149bc364422e187a69d66d76a7e7088c06e5f0ba39a57a57eeb6eea84c82ae81b1d61759bf9a0aae2 WHIRLPOOL 1ce2b31bc5c802b671d0182908b8c59573c7d389da8b24646a28cfd2931790909a7e2f8dc8bdbaf16c022c32c4d7165322f11214a06d2926b82a8296d0215147
 MISC metadata.xml 233 SHA256 4aee9335129898172e76dfedb640e3c5f1383f6cd619d8c7f5d9fc26acbf0e69 SHA512 b06d30613086872559ca7030d9e67b8bbd5274a72876ea539ca840f910bda12d78ea5e286ff8e98c5f943f6ef7e817fa5ec1b3d55ba364ab9250291951260869 WHIRLPOOL c640cc50e1b7b2aa52217f3e6b67965337a41b5ce461793c4f42c178faeedaa7bfd617637960f6f6e7d40e7b29386d68abef27d29d1df2421bbe850e87aa9c68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQF8BAEBCABmBQJTrHshXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQF8BAEBCABmBQJT4AStXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1MUE3MTczOTAwRTQzNTc0RDJBOUJBMDIx
-Q0QxM0M4QUQ0MzAxMzQyAAoJEBzRPIrUMBNCmrEH/AtTBNesDznrfx0RWqtQuam8
-57gzeqGB0EFjwbL5QXKsrWRi66CeXczlLig+HwWQqm+d2h1fu30UxX0qffvnPfSB
-KmjXoShGTzFP6PLDac63wo4Yi54cT+WxZfe/PhhPibkEJJVd0DT2epGFGHbME0/o
-uEm7NbJtuLMPSdj4el+BBVmiClmPxQUY4Nu/NIxk4cScuF0GD53VQwvUXBZ3MGTo
-KA16m58rGNrSVjRilFaA7BbpJ50WBsB7LspRwUTnUcmZyA3zl2rPMKWv10l6eMb0
-FYPI9LkaDz47Wg4pnISCuv3+5ocTZTFT8ekDEMjHHfCdYdk+mxPx8UeANivd6IY=
-=d/Re
+Q0QxM0M4QUQ0MzAxMzQyAAoJEBzRPIrUMBNCAy0H/280yir0uhbtIGW0P1ieA0/R
+aXZiaGr/lxXLUkvASIND1hfgwHO/gAWd2EO4WFQnr0wELmbW1mLGBmCPa5RJKZbE
+6BL/7Ge37dAoFs+qjT+gIaBInlL5DlsWFZxpPa6OaH7VgG/gUdxnIUdFuCvBB/YZ
+uXluHP0Lr7HgXOnXi446BKALUriylsFMLp6WqHL9KgYyvdmsiZJiya54sKi3Pvi4
+fxgaWN2xtW/+YVd3O3e5kIREY39rHjI6mAqlaRBr47hu08VjKDUOCCxv/fsocP4T
+cEZQR4hBu/fcTzl7M9RxPXowAW0e14dk4OEPvEnDbjQtwneox7AmQ3j/1VA4W0Y=
+=5GQy
 -----END PGP SIGNATURE-----
