@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=>=sys-apps/pcsc-lite-1.8.3 usb? ( virtual/libusb:1 ) kernel_linux? ( virtual/pkgconfig ) virtual/pkgconfig
+DESCRIPTION=CCID free software driver
+EAPI=5
+HOMEPAGE=http://pcsclite.alioth.debian.org/ccid.html
+IUSE=twinserial +usb
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=sys-apps/pcsc-lite-1.8.3 usb? ( virtual/libusb:1 )
+SLOT=0
+SRC_URI=http://alioth.debian.org/frs/download.php/file/4091/ccid-1.4.17.tar.bz2
+_eclasses_=autotools	82621aada74cb2a492bd8e73d49e9f54	autotools-utils	3727db64c7b960903d5033280f108080	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402	udev	da001465a2e939c93f7ae16947ce3438
+_md5_=76d9f9531039d00b6b4cee0f0b734c69
