@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=dev-python/twisted-core[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/ipaddr[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] net-misc/tor net-zope/zope-interface[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( dev-python/mock[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DESCRIPTION=Twisted-based Tor controller client, with state-tracking and configuration abstractions
+EAPI=5
+HOMEPAGE=https://github.com/meejah/txtorcon https://pypi.python.org/pypi/txtorcon
+IUSE=test python_targets_python2_7
+KEYWORDS=~amd64
+LICENSE=MIT
+RDEPEND=dev-python/twisted-core[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/ipaddr[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] net-misc/tor net-zope/zope-interface[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=mirror://pypi/t/txtorcon/txtorcon-0.10.1.tar.gz
+_eclasses_=distutils-r1	d48d51c220f1678179fc4ab13b534ec1	eutils	06133990e861be0fe60c2b428fd025d9	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	c820706d8b22c1d0fe215a9d4a47671d	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=4a0ee3fe40f4232df6b5c27b39216b2f
