@@ -1,0 +1,3 @@
+arch/powerpc/ppc32
+# 04 Aug 2014; Anthony G. Basile <blueness@gentoo.org>
+# Pegasos hardware is no longer supported.
